Fix goddamn css bug knez/blog@320de6aa192a17384e50ca6afb2bd2da826ce3e5

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,11 @@ p code {
   word-wrap: break-word;
   text-indent: 0;
 }
+
+p {
+  word-wrap: break-word;
+}
+
 pre code {
   font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
 }
