--- a/css/style.css
+++ b/css/style.css
@@ -521,21 +521,28 @@ nav.navigation a.button {
  */
  #toc {
   line-height: 1em;
-  font-size: .7em;
+  font-size: .9em;
   word-wrap: break-word;
   padding: 8px;
   padding-left: 16px;
   padding-bottom: 14px;
   margin: 0 0 25px 0;
   display: block;
-  color: #808080;
   background: #fff;
   border: none;
   box-shadow: inset 0 0 0 1px #E4EBF2;
   border-radius: 4px;
   overflow: hidden;
-  font-family: 'Menlo', 'Monaco', Courier, monospace;
 }
+
+a {
+  color: #949ea4;
+}
+
+a:hover {
+  color: #0366d6;
+}
+
 #TableOfContents {
   margin: 1em 0 0 0;
   overflow-x: auto;
@@ -543,23 +550,27 @@ nav.navigation a.button {
   word-break: break-all;
   white-space: nowrap;
 }
+
 #TableOfContents ul {
   list-style-type:none;
   margin: 0;
   padding: 0 .5em;
 }
+
 #TableOfContents ul li {
   list-style-type: none;
   line-height: 1.7em;
 }
+
 #TableOfContents > ul {
   padding: 0;
 }
+
 #TableOfContents > ul > li > ul {
   padding: 0;
 }
+
 #TableOfContents a code{
-  font-family: Menlo, Monaco, Courier;
   background-color: #fff;
   font-size: 11px;
   padding: 2px 3px;
