--- a/css/style.css
+++ b/css/style.css
@@ -521,7 +521,7 @@ nav.navigation a.button {
  */
  #toc {
   line-height: 1em;
-  font-size: .9em;
+  font-size: 1em;
   word-wrap: break-word;
   padding: 8px;
   padding-left: 16px;
